objects/Test_Summary__c.object
<CustomObject>
 <fullName>Test_Summary__c</fullName>
 <description>Summary of test results grouped by test date.</description>
 <fields>
  <fullName>Apex_Tests_Rollup__c</fullName>
  <inlineHelpText>The total number of Apex Test Classes.  Apex test classes with unit tests.</inlineHelpText>
  <label>Apex Tests Rollup</label>
  <summaryFilterItems>
   <field>Test_Result__c.RecordTypeId</field>
   <operation>equals</operation>
   <value>Apex Test Class</value>
  </summaryFilterItems>
  <summaryForeignKey>Test_Result__c.Test_Summary__c</summaryForeignKey>
  <summaryOperation>count</summaryOperation>
  <type>Summary</type>
 </fields>
 <fields>
  <fullName>Apex_Tests__c</fullName>
  <inlineHelpText>The total number of Apex Test Classes.  Apex test classes with unit tests.</inlineHelpText>
  <label>Apex Tests</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>Automated_Tests_Rollup__c</fullName>
  <inlineHelpText>The total number of automated functional tests (Selenium scripts).</inlineHelpText>
  <label>Automated Tests Rollup</label>
  <summaryFilterItems>
   <field>Test_Result__c.RecordTypeId</field>
   <operation>equals</operation>
   <value>Test Script</value>
  </summaryFilterItems>
  <summaryForeignKey>Test_Result__c.Test_Summary__c</summaryForeignKey>
  <summaryOperation>count</summaryOperation>
  <type>Summary</type>
 </fields>
 <fields>
  <fullName>Automated_Tests__c</fullName>
  <inlineHelpText>The total number of automated functional tests (Selenium scripts).</inlineHelpText>
  <label>Automated Tests</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>Completed__c</fullName>
  <defaultValue>false</defaultValue>
  <description>Indicates when a BUTR run is finished.  Used to trigger email notification workflow.</description>
  <inlineHelpText>Indicates when a BUTR run is finished.  Used to trigger email notification workflow.</inlineHelpText>
  <label>Completed</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>Error_Details__c</fullName>
  <inlineHelpText>Log field for detailed error messages from testing.</inlineHelpText>
  <label>Error Details</label>
  <length>32768</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>Failed_Apex_Tests_Rollup__c</fullName>
  <inlineHelpText>The total number of failed Apex Test Classes. Apex test classes with unit tests.</inlineHelpText>
  <label>Failed Apex Tests Rollup</label>
  <summaryFilterItems>
   <field>Test_Result__c.RecordTypeId</field>
   <operation>equals</operation>
   <value>Apex Test Class</value>
  </summaryFilterItems>
  <summaryFilterItems>
   <field>Test_Result__c.Result__c</field>
   <operation>equals</operation>
   <value>Fail</value>
  </summaryFilterItems>
  <summaryForeignKey>Test_Result__c.Test_Summary__c</summaryForeignKey>
  <summaryOperation>count</summaryOperation>
  <type>Summary</type>
 </fields>
 <fields>
  <fullName>Failed_Apex_Tests__c</fullName>
  <inlineHelpText>The total number of failed Apex Test Classes. Apex test classes with unit tests.</inlineHelpText>
  <label>Failed Apex Tests</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>Failed_Automated_Tests_Rollup__c</fullName>
  <inlineHelpText>The total number of failed automated functional tests (Selenium scripts).</inlineHelpText>
  <label>Failed Automated Tests Rollup</label>
  <summaryFilterItems>
   <field>Test_Result__c.RecordTypeId</field>
   <operation>equals</operation>
   <value>Test Script</value>
  </summaryFilterItems>
  <summaryFilterItems>
   <field>Test_Result__c.Result__c</field>
   <operation>equals</operation>
   <value>Fail</value>
  </summaryFilterItems>
  <summaryForeignKey>Test_Result__c.Test_Summary__c</summaryForeignKey>
  <summaryOperation>count</summaryOperation>
  <type>Summary</type>
 </fields>
 <fields>
  <fullName>Failed_Automated_Tests__c</fullName>
  <inlineHelpText>The total number of failed automated functional tests (Selenium scripts).</inlineHelpText>
  <label>Failed Automated Tests</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>Failed_Manual_Tests_Rollup__c</fullName>
  <inlineHelpText>The total number of failed manual tests.</inlineHelpText>
  <label>Failed Manual Tests Rollup</label>
  <summaryFilterItems>
   <field>Test_Result__c.RecordTypeId</field>
   <operation>equals</operation>
   <value>Test Case</value>
  </summaryFilterItems>
  <summaryFilterItems>
   <field>Test_Result__c.Result__c</field>
   <operation>equals</operation>
   <value>Fail</value>
  </summaryFilterItems>
  <summaryForeignKey>Test_Result__c.Test_Summary__c</summaryForeignKey>
  <summaryOperation>count</summaryOperation>
  <type>Summary</type>
 </fields>
 <fields>
  <fullName>Failed_Manual_Tests__c</fullName>
  <inlineHelpText>The total number of failed manual tests.</inlineHelpText>
  <label>Failed Manual Tests</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>Instance_Name__c</fullName>
  <inlineHelpText>The instance where the tests were executed in.</inlineHelpText>
  <label>Instance Name</label>
  <type>Picklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>Production</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>Lock_Summary_Values__c</fullName>
  <defaultValue>false</defaultValue>
  <inlineHelpText>Locks summary fields (Total_...) and prevents any result changes to get modify them.</inlineHelpText>
  <label>Lock Summary Values</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>Manual_Tests_Rollup__c</fullName>
  <inlineHelpText>The total number of manual tests.</inlineHelpText>
  <label>Manual Tests Rollup</label>
  <summaryFilterItems>
   <field>Test_Result__c.RecordTypeId</field>
   <operation>equals</operation>
   <value>Test Case</value>
  </summaryFilterItems>
  <summaryForeignKey>Test_Result__c.Test_Summary__c</summaryForeignKey>
  <summaryOperation>count</summaryOperation>
  <type>Summary</type>
 </fields>
 <fields>
  <fullName>Manual_Tests__c</fullName>
  <inlineHelpText>The total number of manual tests.</inlineHelpText>
  <label>Manual Tests</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>Result__c</fullName>
  <formula>IF(System_Error__c, "Fail",
IF(AND(Total_Failed_Tests__c = 0, Total_Coverage__c = 0), "Pass", 
IF(AND(Total_Failed_Tests__c = 0, Total_Coverage__c &gt;= 0.75), "Pass", "Fail" ) 
))</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
  <inlineHelpText>The overall test result.  Total Coverage must be 75% or higher and there are no failed test results.</inlineHelpText>
  <label>Result</label>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>Success_Rate__c</fullName>
  <formula>IF(  Total_Tests_Formula__c  != 0 , (  Total_Tests_Formula__c  -  Total_Failed_Tests_Formula__c  )  /   Total_Tests_Formula__c  , NULL)</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
  <inlineHelpText>The percentage of passing tests.</inlineHelpText>
  <label>Success Rate</label>
  <precision>18</precision>
  <scale>2</scale>
  <type>Percent</type>
 </fields>
 <fields>
  <fullName>System_Error__c</fullName>
  <defaultValue>false</defaultValue>
  <label>System Error</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>Test_Date__c</fullName>
  <inlineHelpText>The test date.</inlineHelpText>
  <label>Test Date</label>
  <required>true</required>
  <type>Date</type>
 </fields>
 <fields>
  <fullName>Time_s__c</fullName>
  <inlineHelpText>The time (in seconds) it took to run all the automated test scripts, Apex Code Coverage and Apex classes with unit tests.</inlineHelpText>
  <label>Time (s)</label>
  <summarizedField>Test_Result__c.Time__c</summarizedField>
  <summaryFilterItems>
   <field>Test_Result__c.RecordTypeId</field>
   <operation>notEqual</operation>
   <value>Test Case</value>
  </summaryFilterItems>
  <summaryForeignKey>Test_Result__c.Test_Summary__c</summaryForeignKey>
  <summaryOperation>sum</summaryOperation>
  <type>Summary</type>
 </fields>
 <fields>
  <fullName>Total_Apex_Unit_Tests_Rollup__c</fullName>
  <inlineHelpText>The total number of Apex unit tests executed.</inlineHelpText>
  <label>Total Apex Unit Tests Rollup</label>
  <summarizedField>Test_Result__c.Total_Unit_Tests__c</summarizedField>
  <summaryFilterItems>
   <field>Test_Result__c.RecordTypeId</field>
   <operation>equals</operation>
   <value>Apex Test Class</value>
  </summaryFilterItems>
  <summaryForeignKey>Test_Result__c.Test_Summary__c</summaryForeignKey>
  <summaryOperation>sum</summaryOperation>
  <type>Summary</type>
 </fields>
 <fields>
  <fullName>Total_Apex_Unit_Tests__c</fullName>
  <inlineHelpText>The total number of Apex unit tests executed.</inlineHelpText>
  <label>Total Apex Unit Tests</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>Total_Coverage__c</fullName>
  <inlineHelpText>Total code coverage of all Apex classes and triggers.  75% is needed to pass.</inlineHelpText>
  <label>Total Coverage</label>
  <precision>18</precision>
  <scale>2</scale>
  <type>Percent</type>
 </fields>
 <fields>
  <fullName>Total_Failed_Apex_Unit_Tests_Rollup__c</fullName>
  <inlineHelpText>The total number of failed unit tests.</inlineHelpText>
  <label>Total Failed Apex Unit Tests Rollup</label>
  <summarizedField>Test_Result__c.Total_Failed_Unit_Tests__c</summarizedField>
  <summaryFilterItems>
   <field>Test_Result__c.RecordTypeId</field>
   <operation>equals</operation>
   <value>Apex Test Class</value>
  </summaryFilterItems>
  <summaryFilterItems>
   <field>Test_Result__c.Result__c</field>
   <operation>equals</operation>
   <value>Fail</value>
  </summaryFilterItems>
  <summaryForeignKey>Test_Result__c.Test_Summary__c</summaryForeignKey>
  <summaryOperation>sum</summaryOperation>
  <type>Summary</type>
 </fields>
 <fields>
  <fullName>Total_Failed_Apex_Unit_Tests__c</fullName>
  <inlineHelpText>The total number of failed unit tests.</inlineHelpText>
  <label>Total Failed Apex Unit Tests</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>Total_Failed_Tests_Formula__c</fullName>
  <formula>Failed_Apex_Tests_Rollup__c  +  Failed_Automated_Tests_Rollup__c +  Failed_Manual_Tests_Rollup__c</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
  <inlineHelpText>The total number of failed tests. Failed Apex Tests + Failed Automated Tests + Failed Manual Tests.</inlineHelpText>
  <label>Total Failed Tests Formula</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>Total_Failed_Tests__c</fullName>
  <inlineHelpText>The total number of failed tests.  Failed Apex Tests + Failed Automated Tests + Failed Manual Tests.</inlineHelpText>
  <label>Total Failed Tests</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>Total_Tests_Formula__c</fullName>
  <formula>Apex_Tests_Rollup__c +  Automated_Tests_Rollup__c +  Manual_Tests_Rollup__c</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
  <inlineHelpText>The total number of all tests. Apex Tests + Automated Tests + Manual Tests.</inlineHelpText>
  <label>Total Tests Formula</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>Total_Tests__c</fullName>
  <inlineHelpText>The total number of all tests.  Apex Tests + Automated Tests + Manual Tests.</inlineHelpText>
  <label>Total Tests</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>VF_Date_Hook__c</fullName>
  <description>Field to accept date ranges for deleting testing summaries from the Testing Management VF page</description>
  <label>VF Date Hook</label>
  <type>DateTime</type>
 </fields>
 <label>Test Summary</label>
 <listViews>
  <fullName>All</fullName>
  <columns>NAME</columns>
  <columns>Instance_Name__c</columns>
  <columns>Test_Date__c</columns>
  <columns>Result__c</columns>
  <columns>Total_Coverage__c</columns>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <nameField>
  <displayFormat>TS-{00000}</displayFormat>
  <label>Test Summary</label>
  <type>AutoNumber</type>
 </nameField>
 <pluralLabel>Test Summaries</pluralLabel>
 <recordTypes>
  <fullName>Automated</fullName>
  <active>true</active>
  <description>A test summary of autmoated test results</description>
  <label>Automated</label>
 </recordTypes>
 <recordTypes>
  <fullName>Manual</fullName>
  <active>true</active>
  <description>A test summary of manual test results</description>
  <label>Manual</label>
 </recordTypes>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>